
Changes in 2.8.17
-----------------
- Fix $function_to_remove var name typo in Actions.php
- Update "Display Options Format" string translation (ES & FR)
- Adjust ProperDate() short month display according to Preferences in Date.php
- Handle IS NOT NULL cases before executing SQL in database.inc.php
- Bugfix SQL error value too long for type varchar(10) in MarkingPeriods.php

Changes in 2.8.16
-----------------
- Fix SQL error invalid input syntax for type numeric in _makeLetterGrade.fnc.php

Changes in 2.8.15
-----------------
- 2015-2016 School Year update in rosariosis.sql & config.inc.sample.php
- Add Course Period Absences Widget in Widgets.fnc.php sponsored by Hisham Abu Dawoud
- Add Balance field to Advanced Report in Export.php sponsored by LM Idiomes
- Add focus to username field in index.php
- Update french & spanish translations

Changes in 2.8.14
-----------------
- Fix submenuOffset when Side.php reloaded in warehouse.js

Changes in 2.8.13
-----------------
- Fix #106 Comments with quotes ' in Comments.inc.php
- Fix #106 Other_Info category include in Student.php & User.php

Changes in 2.8.12
-----------------
- Fix #102 error language "plpgsql" does not exist in rosariosis.sql
- Fix Minutes when (re)create Calendar in Calendar.php

Changes in 2.8.11
-----------------
- Fix right arrow on menu hover when module text too long in stylesheet.css

Changes in 2.8.10
-----------------
- Add School Configuration english & spanish help texts in Help_en.php & Help_es.php
- Reference the Quick Setup Guide in README.md & INSTALL
- Update stylesheet_wkhtmltopdf.css

Changes in 2.8.9
----------------
- Attendance Codes Type & State Code required in AttendanceCodes.php
- Add Add No Subjects/Courses were found error in ReportCardComments.php
- Update french & spanish translations
- Bugfix ListOutput checkbox column: no sorting icon in stylesheet.css

Changes in 2.8.8
----------------
- Admin menu: div + table to nested ul in Side.php