@@ -193,7 +193,22 @@ function Rollover($table)
 			//FJ multiple school periods for a course period
 			//FJ bugfix SQL bug more than one row returned by a subquery
 			// ROLL COURSE_PERIOD_SCHOOL_PERIODS
-			DBQuery("INSERT INTO COURSE_PERIOD_SCHOOL_PERIODS (COURSE_PERIOD_SCHOOL_PERIODS_ID,COURSE_PERIOD_ID,PERIOD_ID,DAYS) SELECT ".db_seq_nextval('COURSE_PERIOD_SCHOOL_PERIODS_SEQ').",(SELECT cp.COURSE_PERIOD_ID FROM COURSE_PERIODS cp WHERE cpsp.COURSE_PERIOD_ID=cp.ROLLOVER_ID),(SELECT n.PERIOD_ID FROM SCHOOL_PERIODS n WHERE n.ROLLOVER_ID=cpsp.PERIOD_ID AND n.SYEAR='".$next_syear."' AND n.SCHOOL_ID='".UserSchool()."'),DAYS FROM COURSE_PERIOD_SCHOOL_PERIODS cpsp, COURSE_PERIODS cp WHERE cp.SYEAR='".UserSyear()."' AND cp.SCHOOL_ID='".UserSchool()."' AND cpsp.COURSE_PERIOD_ID=cp.COURSE_PERIOD_ID");
+			DBQuery( "INSERT INTO COURSE_PERIOD_SCHOOL_PERIODS
+				(COURSE_PERIOD_SCHOOL_PERIODS_ID,COURSE_PERIOD_ID,PERIOD_ID,DAYS)
+				SELECT " . db_seq_nextval('COURSE_PERIOD_SCHOOL_PERIODS_SEQ') . ",
+					(SELECT cp.COURSE_PERIOD_ID
+						FROM COURSE_PERIODS cp
+						WHERE cpsp.COURSE_PERIOD_ID=cp.ROLLOVER_ID),
+					(SELECT n.PERIOD_ID
+						FROM SCHOOL_PERIODS n
+						WHERE n.ROLLOVER_ID=cpsp.PERIOD_ID
+						AND n.SYEAR='" . $next_syear . "'
+						AND n.SCHOOL_ID='" . UserSchool() . "'),
+					DAYS
+				FROM COURSE_PERIOD_SCHOOL_PERIODS cpsp, COURSE_PERIODS cp
+				WHERE cp.SYEAR='" . UserSyear() . "'
+				AND cp.SCHOOL_ID='" . UserSchool() . "'
+				AND cpsp.COURSE_PERIOD_ID=cp.COURSE_PERIOD_ID" );
 		break;
 
 		case 'STUDENT_ENROLLMENT':
