@@ -7,6 +7,7 @@ Changes in 2.8.17
 - Adjust ProperDate() short month display according to Preferences in Date.php
 - Handle IS NOT NULL cases before executing SQL in database.inc.php
 - Bugfix SQL error value too long for type varchar(10) in MarkingPeriods.php
+- Bugfix force required school period if none in Courses.php
 
 Changes in 2.8.16
 -----------------
